# osic-pulmonary-fibrosis-progression

./: .gitignore  pyproject.toml
experiments/lightgbm_baseline/: main.py
experiments/lightgbm_with_ct_features/: main.py
experiments/lung_segmentation/: main.py
src/osic_pulmonary_fibrosis_progress/: __init__.py  dataset.py  datasource.py  io.py  lightgbm.py  lightning.py  logger.py  metric.py  transforms.py
src/osic_pulmonary_fibrosis_progression/: __init__.py  comm.py  config.py  dataset.py  dcm.py  io.py  lightgbm.py  logger.py  lungmask.py  metric.py  net.py  transforms.py  util.py
src/osic_pulmonary_fibrosis_progression/task/: __init__.py  common.py  ct_features.py  tabular.py
