[tool.poetry]
name = "osic-pulmonary-fibrosis-progress"
version = "0.1.0"
description = ""
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytorch-lightning = "^0.9.0"
torchtoolbox = "^0.1.5"
timm = "^0.2.1"
kaggle_timm_pretrained = "^0.3.1"
torch = "^1.5.1"
torchvision = "^0.6.1"
pandas = "^1.0.5"
scikit-learn = "^0.23.1"
imageio = "^2.9.0"
numpy = "^1.19.0"
wandb = "^0.9.3"
cloud-tpu-client = "^0.10"
category_encoders = "^2.2.2"
lightgbm = "^3.0.0"
pydicom = "^2.0.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^5.1.1"
pppiv = "^0.1.2"
kkt = "^0.3.7"
jupyter = "^1.0.0"
jupytext = "^1.5.1"
jupyter_nbextensions_configurator = "^0.4.1"

[tool.kkt]
enable_git_tag = false
enable_constraint = false
secret_keys = ["WANDB_API_KEY"]

[tool.kkt.meta_data]
competition_sources = ["osic-pulmonary-fibrosis-progress"]
dataset_sources = []
enable_gpu = false
enable_internet = true
is_private = true
kernel_type = "script"
slug = "osic-pulmonary-fibrosis-progress"

  [tool.kkt.meta_data.runner]
    prologue=""

    [tool.kkt.meta_data.runner.lgb_baseline]
    code_file = "runner/lgb_baseline.py"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
